--- a/404.html
+++ b/404.html
@@ -127,9 +127,9 @@
                 </span>
               </span>
               <div class="media-content hide-xs font-merryweather">Welcome to the blog!
-I&rsquo;m Hugo, my background is in Psychology, more specifically, the area of face perception. Always eager to learn and after falling in love with R, I will blog mostly about data related topics(e.g. importing, wrangling, visualization, statistics). Not yet Machine Learning, I&rsquo;m still learning.
-I want to share what I have been learning in R and try to help others to work with it.
-I also enjoy other things, non-data related, like history, tvshows, and literature, which I might blog about it.</div>
+I&rsquo;m Hugo, my background is in Psychology, more specifically, the area of face perception. Always eager to learn and after falling in love with R, I will blog mostly about data related topics(e.g. importing, wrangling, visualization, statistics). Not yet Machine Learning, I&rsquo;m still exploring it.
+I want to share what I have been learning in R and try to help you to work with it.
+I also enjoy other things, not necessarily data related, like history, tvshows, and literature, which I might blog about.</div>
             </div>
             <div style="clear:both;"></div>
             <hr>
